nft number stuck to bottom, no padding bug fix, wallet search bar css bug fix... --minor-fix

--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -51,7 +51,7 @@
   box-shadow: 0px 1px 6px rgba(180, 185, 199, 0.25);
   border-radius: 38px;
   border: 1px solid #ffffff;
-  width: 310px;
+  width: 100%;
   height: 48px;
   padding: 0 16px;
   color: #62718a;
